--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="container">
       <h1>Welcome to My Personal Website</h1>
-      <p>Hello! I'm Namikaze Nara, and this is my corner on the web.</p>
+      <p>Hello! I'm Nara, and this is my corner on the web.</p>
     </div>
   </header>
 
