--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <section id="about" class="fade-in">
     <div class="container profile">
-      <img src="profile.jpg" alt="Your Profile Picture">
+      <img src="images/profile.jpg" alt="Your Profile Picture">
       <p>Hi, I'm Namikaze Nara! Let's connect:</p>
       <div class="social-links">
         <a href="https://twitter.com/NamikazeNara" target="_blank">Twitter</a> |
