--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="container">
       <h1>Welcome to My Personal Website</h1>
-      <p>Hello! I'm Nara, and this is my corner on the web.</p>
+      <p>Hello! I'm Namikaze Nara, and this is my corner on the web.</p>
     </div>
   </header>
 
@@ -26,7 +26,7 @@
 
   <section id="about" class="fade-in">
     <div class="container profile">
-      <img src="images/profile.jpg" alt="Your Profile Picture">
+      <img src="Studios/profile.jpg" alt="Your Profile Picture">
       <p>Hi, I'm Namikaze Nara! Let's connect:</p>
       <div class="social-links">
         <a href="https://twitter.com/NamikazeNara" target="_blank">Twitter</a> |
