--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <p>Hi, I'm Namikaze Nara! Let's connect:</p>
           <div class="social-links">
             <a href="https://twitter.com/yourusername" target="_blank">Twitter</a> |
-            <a href="https://tiktok.com/in/@wannabeworkaholic" target="_blank">TikTok</a> |
+            <a href="https://tiktok.com/@wannabeworkaholic" target="_blank">TikTok</a> |
             <a href="https://github.com/Namikazenara" target="_blank">GitHub</a>
           </div>
         </div></a></li>
