--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <ul>
         <li><a href="#about"><div class="profile">
-          <img src="profile.jpg" alt="Your Profile Picture">
+          <img src="Profile.jpg" alt="Your Profile Picture">
           <p>Hi, I'm Namikaze Nara! Let's connect:</p>
           <div class="social-links">
             <a href="https://twitter.com/yourusername" target="_blank">Twitter</a> |
