--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+  <!-- Header Section -->
   <header>
     <section id="about" class="fade-in">
       <div class="container">
@@ -16,24 +18,31 @@
     </section>
   </header>
   
+  <!-- Navigation Bar -->
   <nav>
     <div class="container">
       <ul>
-        <li><a href="#about"><div class="profile">
-          <img src="Profile.jpg" alt="Your Profile Picture">
-          <p>Hi, I'm Namikaze Nara! Let's connect:</p>
-          <div class="social-links">
-            <a href="https://twitter.com/yourusername" target="_blank">Twitter</a> |
-            <a href="https://tiktok.com/@wannabeworkaholic" target="_blank">TikTok</a> |
-            <a href="https://github.com/Namikazenara" target="_blank">GitHub</a>
-          </div>
-        </div></a></li>
+        <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </nav>
-
+  
+  <!-- Profile Section -->
+  <section class="profile">
+    <div class="container">
+      <img src="Profile.jpg" alt="Your Profile Picture" class="profile-image">
+      <p>Hi, I'm Namikaze Nara! Let's connect:</p>
+      <div class="social-links">
+        <a href="https://twitter.com/yourusername" target="_blank">Twitter</a> |
+        <a href="https://tiktok.com/@wannabeworkaholic" target="_blank">TikTok</a> |
+        <a href="https://github.com/Namikazenara" target="_blank">GitHub</a>
+      </div>
+    </div>
+  </section>
+  
+  <!-- About Me Section -->
   <section id="about" class="fade-in">
     <div class="container">
       <h2>About Me</h2>
@@ -41,6 +50,7 @@
     </div>
   </section>
 
+  <!-- Projects Section -->
   <section id="projects" class="fade-in">
     <div class="container">
       <h2>Projects</h2>
@@ -51,7 +61,8 @@
       </ul>
     </div>
   </section>
-
+  
+  <!-- Contact Section -->
   <section id="contact" class="fade-in">
     <div class="container">
       <h2>Contact Me</h2>
@@ -59,13 +70,16 @@
     </div>
   </section>
 
+  <!-- Footer Section -->
   <footer>
     <div class="container">
       <p>&copy; 2024 Namikaze Nara. All rights reserved.</p>
     </div>
   </footer>
 
+  <!-- Fade-in Animation Script -->
   <script>
+    // Fade-in effect for scrolling
     const elements = document.querySelectorAll('.fade-in');
     const showOnScroll = () => {
       elements.forEach(el => {
@@ -77,5 +91,7 @@
     };
     window.addEventListener('scroll', showOnScroll);
   </script>
+  
 </body>
 </html>
+
