--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="about" class="fade-in">
       <div class="container">
         <h1>Welcome to My Personal Website</h1>
-        <p>Hello! I'm Namikaze Nara, and this is my corner on the web.</p>
+        <p>Hello! I'm Fadilah Rizki Ramadhani, and this is my corner on the web.</p>
       </div>
     </section>
   </header>
@@ -33,7 +33,7 @@
   <section class="profile">
     <div class="container">
       <img src="Profile.jpg" alt="Your Profile Picture" class="profile-image">
-      <p>Hi, I'm Namikaze Nara! Let's connect:</p>
+      <p>Hi, I'm Fadilah Rizki Ramadhani! Let's connect:</p>
       <div class="social-links">
         <a href="https://twitter.com/yourusername" target="_blank">Twitter</a> |
         <a href="https://tiktok.com/@wannabeworkaholic" target="_blank">TikTok</a> |
