--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section id="about" class="fade-in">
     <div class="container">
       <h2>About Me</h2>
-      <p>This section is all about who I am and what I do. Share a brief bio, your hobbies, or your career!</p>
+      <p>"My name is Fadilah Rizki Ramadhani, a Management graduate with a strong passion for analyzing information, particularly in economics, companies, and cryptocurrency. I enjoy conducting both technical and fundamental analyses of companies, which has sharpened my critical thinking and problem-solving skills. With a calm demeanor and enthusiasm for learning new things, I am always eager to grow and develop further."</p>
     </div>
   </section>
 
