--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
   <section id="contact" class="fade-in">
     <div class="container">
       <h2>Contact Me</h2>
-      <p>Feel free to reach out to me via email at <a href="mailto:fadilramadhani228@gmail.com">fadilramadhani228@gmail.com</a>.</p>
+      <p>Feel free to reach out to me via email or WhatsApp:</p> 
+       <p>Email: <a href="mailto:fadilramadhani228@gmail.com">fadilramadhani228@gmail.com</a></p>
+        <a href="https://wa.me/6285218130055" target="_blank" class="whatsapp-button">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
+      Chat via WhatsApp 
+      </a>
     </div>
   </section>
 
