--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
     <div class="container">
       <h2>Contact Me</h2>
       <p>Feel free to reach out to me via email or WhatsApp:</p> 
-       <p>Email: <a href="mailto:fadilramadhani228@gmail.com">fadilramadhani228@gmail.com</a></p>
-        <a href="https://wa.me/6285218130055" target="_blank" class="whatsapp-button">
+       <a href="mailto:fadilramadhani228@gmail.com" class="email-button">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Email" class="email-icon">
+      Send Email
+    </a>
+    <a href="https://wa.me/62XXXXXXXXXX" target="_blank" class="whatsapp-button">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
       Chat via WhatsApp 
       </a>
