--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Email" class="email-icon">
       Send Email
     </a>
-    <a href="https://wa.me/62XXXXXXXXXX" target="_blank" class="whatsapp-button">
+    <a href="https://wa.me/6285218130055" target="_blank" class="whatsapp-button">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
       Chat via WhatsApp 
       </a>
