--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
   <nav>
     <div class="container">
       <ul>
-        <li><a href="blog/index.html">Blog</a></li>
+        <li><a href="Projects/index.html">Blog</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
