--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav>
     <div class="container">
       <ul>
-        <li><a href="Projects/index.html">Blog</a></li>
+        <li><a href="Projects/index.html">Projects</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
