--- a/Projects/index.html
+++ b/Projects/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Blog - Namikaze Nara</title>
+  <title>My Projects - Namikaze Nara</title>
   <link rel="stylesheet" href="../style.css"> <!-- Tautkan kembali ke style.css -->
 </head>
 <body>
 
   <header>
     <div class="container">
-      <h1>My Blog</h1>
+      <h1>My Projects</h1>
       <p>Welcome to my blog where I share updates on my projects and learning journey.</p>
     </div>
   </header>
@@ -19,7 +19,7 @@
     <div class="container">
       <ul>
         <li><a href="../index.html">Home</a></li> <!-- Tautkan kembali ke halaman utama -->
-        <li><a href="index.html">Blog</a></li>
+        <li><a href="index.html">Projects</a></li>
         <li><a href="../#contact">Contact</a></li>
       </ul>
     </div>
