--- a/Projects/index.html
+++ b/Projects/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Projects - Namikaze Nara</title>
+  <title>Data Analyst - Namikaze Nara</title>
   <link rel="stylesheet" href="../style.css"> <!-- Tautkan kembali ke style.css -->
 </head>
 <body>
 
   <header>
     <div class="container">
-      <h1>My Projects</h1>
-      <p>Welcome to my blog where I share updates on my projects and learning journey.</p>
+      <h1>Data Analyst</h1>
+      <p>Welcome to my blog where I share updates on my projects and learning journey about Data Analyst.</p>
     </div>
   </header>
 
