--- a/Projects/Roadmap.html
+++ b/Projects/Roadmap.html
@@ -1,1 +1,48 @@
-Roadmap
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Roadmap Data Analyst</title>
+  <link rel="stylesheet" href="../style.css"> <!-- pastikan style.css terhubung -->
+</head>
+<body>
+
+  <!-- Navigation Bar -->
+  <nav>
+    <div class="container">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="index.html">Projects</a></li>
+        <li><a href="roadmap.html" class="active">Roadmap</a></li>
+        <li><a href="../contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Roadmap Section -->
+  <section id="roadmap">
+    <div class="container">
+      <h2>Data Analyst Roadmap</h2>
+      <p>Here is the roadmap for becoming a data analyst in the next 5 years.</p>
+
+      <!-- Insert your roadmap content here -->
+      <ul>
+        <li><strong>Year 1:</strong> Learn basic data analysis tools (Excel, SQL, etc.)</li>
+        <li><strong>Year 2:</strong> Learn advanced SQL, Python, and Data Visualization</li>
+        <li><strong>Year 3:</strong> Build projects, participate in Kaggle competitions</li>
+        <li><strong>Year 4:</strong> Master Machine Learning, Statistical Analysis</li>
+        <li><strong>Year 5:</strong> Apply for jobs, grow in your data analyst career</li>
+      </ul>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2024 Namikaze Nara. All rights reserved.</p>
+    </div>
+  </footer>
+
+</body>
+</html>
+
