--- a/Projects/index.html
+++ b/Projects/index.html
@@ -16,14 +16,15 @@
   </header>
 
   <nav>
-    <div class="container">
-      <ul>
-        <li><a href="../index.html">Home</a></li> <!-- Tautkan kembali ke halaman utama -->
-        <li><a href="Projects/Roadmap.html">Roadmap</a></li>
-        <li><a href="../#contact">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
+  <div class="container">
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Roadmap</a></li>
+      <li><a href="Projects/roadmap.html">Roadmap</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </div>
+</nav>
 
   <section class="blog-posts">
     <div class="container">
