--- a/Projects/index.html
+++ b/Projects/index.html
@@ -19,7 +19,7 @@
   <div class="container">
     <ul>
       <li><a href="#about">About</a></li>
-      <li><a href="Projects/Roadmap.html">Roadmap</a></li>
+      <li><a href="Roadmap.html">Roadmap</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </div>
