--- a/Projects/index.html
+++ b/Projects/index.html
@@ -18,9 +18,9 @@
   <nav>
   <div class="container">
     <ul>
-      <li><a href="#about">About</a></li>
+      <li><a href="../about">About</a></li>
       <li><a href="Roadmap.html">Roadmap</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="../contact">Contact</a></li>
     </ul>
   </div>
 </nav>
