--- a/Projects/Roadmap.html
+++ b/Projects/Roadmap.html
@@ -15,7 +15,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="index.html">Projects</a></li>
         <li><a href="Roadmap.html" class="active">Roadmap</a></li>
-        <li><a href="../contact.html">Contact</a></li>
+        <li><a href="../index.html">Contact</a></li>
       </ul>
     </div>
   </nav>
