--- a/Projects/Roadmap.html
+++ b/Projects/Roadmap.html
@@ -14,7 +14,6 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="index.html">Projects</a></li>
-        <li><a href="Roadmap.html" class="active">Roadmap</a></li>
         <li><a href="../index.html">Contact</a></li>
       </ul>
     </div>
@@ -28,11 +27,145 @@
 
       <!-- Insert your roadmap content here -->
       <ul>
-        <li><strong>Year 1:</strong> Learn basic data analysis tools (Excel, SQL, etc.)</li>
-        <li><strong>Year 2:</strong> Learn advanced SQL, Python, and Data Visualization</li>
-        <li><strong>Year 3:</strong> Build projects, participate in Kaggle competitions</li>
-        <li><strong>Year 4:</strong> Master Machine Learning, Statistical Analysis</li>
-        <li><strong>Year 5:</strong> Apply for jobs, grow in your data analyst career</li>
+        ## Deskripsi
+Ini adalah roadmap pembelajaran untuk menjadi seorang **Data Analyst**. Dalam proyek ini, saya akan mencatat dan melacak setiap langkah yang perlu saya ambil selama perjalanan saya menuju penguasaan keterampilan data analisis. Roadmap ini mencakup pembelajaran dari dasar hingga tingkat lanjut, dengan tujuan untuk bekerja remote dengan perusahaan internasional dalam waktu 5 tahun.
+
+---
+
+## Table of Contents
+1. [Tahun 1: Dasar-Dasar dan Fondasi](#tahun-1-dasar-dasar-dan-fondasi)
+   - [Quarter 1: Pemahaman Dasar](#quarter-1-pemahaman-dasar)
+   - [Quarter 2: Pengolahan Data dan Statistik](#quarter-2-pengolahan-data-dan-statistik)
+   - [Quarter 3: Penguatan Keterampilan Analisis](#quarter-3-penguatan-keterampilan-analisis)
+   - [Quarter 4: Portfolio Awal](#quarter-4-portfolio-awal)
+2. [Tahun 2-5: Pengembangan Kompetensi Lanjut](#tahun-2-5-pengembangan-kompetensi-lanjut)
+   - [Quarter 1 - Quarter 4](#quarter-1---quarter-4)
+3. [Sumber Pembelajaran](#sumber-pembelajaran)
+
+---
+
+## Tahun 1: Dasar-Dasar dan Fondasi
+
+### Quarter 1: Pemahaman Dasar
+Pada **Quarter 1**, saya akan fokus pada pemahaman dasar alat analisis data seperti Excel, SQL, dan pengenalan Python. Tujuan utama pada kuartal ini adalah menguasai alat-alat yang digunakan oleh seorang data analyst dalam pekerjaan sehari-hari.
+
+#### Bulan 1: Belajar Excel
+- **Tugas**:
+  - Pelajari formula dasar di Excel: SUM, AVERAGE, VLOOKUP.
+  - Latihan membuat Pivot Table dan Grafik.
+  - Mempelajari penggunaan fitur-fitur lain seperti Filter, Sort, dan Conditional Formatting.
+- **Sumber Belajar**:
+  - [Excel for Beginners](https://www.example.com)
+  - [Advanced Excel](https://www.example.com)
+
+#### Bulan 2: Belajar SQL
+- **Tugas**:
+  - Pelajari query dasar SQL: SELECT, WHERE, JOIN, GROUP BY.
+  - Latihan menggunakan database publik.
+- **Sumber Belajar**:
+  - [SQL Basics](https://www.example.com)
+  - [SQL Tutorial by W3Schools](https://www.w3schools.com/sql/)
+
+#### Bulan 3: Pengenalan Python
+- **Tugas**:
+  - Pelajari dasar-dasar Python: tipe data, loop, kondisi.
+  - Pelajari pustaka Python untuk analisis data: pandas dan numpy.
+  - Praktekkan eksplorasi data menggunakan Python.
+- **Sumber Belajar**:
+  - [Python for Data Analysis by Wes McKinney](https://www.oreilly.com/library/view/python-for-data/9781491957653/)
+  - [Learn Python](https://www.learnpython.org/)
+
+---
+
+### Quarter 2: Pengolahan Data dan Statistik
+Pada **Quarter 2**, saya akan memperdalam keterampilan dalam pengolahan data dan mempelajari dasar-dasar statistik yang digunakan untuk analisis.
+
+#### Bulan 4: Statistik Dasar
+- **Tugas**:
+  - Mempelajari konsep-konsep statistik dasar: mean, median, mode, standar deviasi, distribusi normal.
+  - Menggunakan alat statistik di Python atau Excel.
+- **Sumber Belajar**:
+  - [Khan Academy: Statistics and Probability](https://www.khanacademy.org/math/statistics-probability)
+
+#### Bulan 5: Pengenalan Data Cleaning
+- **Tugas**:
+  - Pelajari teknik data cleaning: menangani missing values, outliers, dan duplikasi data.
+  - Praktikkan menggunakan pandas untuk membersihkan dataset.
+- **Sumber Belajar**:
+  - [Data Cleaning with Python](https://realpython.com/python-data-cleaning-numpy-pandas/)
+
+#### Bulan 6: Pengolahan Data Lanjutan
+- **Tugas**:
+  - Pelajari teknik pengolahan data lanjutan: transformasi data, agregasi data.
+  - Gunakan SQL dan Python untuk pengolahan data besar.
+- **Sumber Belajar**:
+  - [SQL for Data Analysts](https://mode.com/sql-tutorial/)
+  - [Advanced Pandas](https://pandas.pydata.org/pandas-docs/stable/)
+
+---
+
+### Quarter 3: Penguatan Keterampilan Analisis
+Pada **Quarter 3**, saya akan memperdalam keterampilan analisis data dan mulai mengerjakan proyek kecil.
+
+#### Bulan 7: Visualisasi Data
+- **Tugas**:
+  - Pelajari alat visualisasi data seperti Matplotlib, Seaborn, dan Tableau.
+  - Buat visualisasi yang efektif untuk data.
+- **Sumber Belajar**:
+  - [Data Visualization with Python](https://www.datacamp.com/courses/data-visualization-with-python)
+  - [Tableau for Beginners](https://www.tableau.com/learn/training)
+
+#### Bulan 8: Analisis Tren dan Prediksi
+- **Tugas**:
+  - Pelajari analisis tren dan prediksi menggunakan teknik regresi.
+  - Terapkan analisis regresi linear dengan Python.
+- **Sumber Belajar**:
+  - [Linear Regression Tutorial](https://www.datacamp.com/community/tutorials/tutorial-regression-analysis-python)
+
+#### Bulan 9: Proyek Data Analyst
+- **Tugas**:
+  - Mulai kerjakan proyek data analysis kecil menggunakan dataset terbuka.
+  - Terapkan teknik yang telah dipelajari di Excel, SQL, dan Python.
+- **Sumber Belajar**:
+  - [Kaggle Datasets](https://www.kaggle.com/datasets)
+
+---
+
+### Quarter 4: Portfolio Awal
+Pada **Quarter 4**, saya akan membangun portfolio untuk menampilkan keterampilan yang telah dipelajari.
+
+#### Bulan 10-12: Membangun Portfolio
+- **Tugas**:
+  - Buat 2-3 proyek analisis data lengkap dan tampilkan di GitHub.
+  - Tulis blog atau presentasi untuk menjelaskan hasil analisis data.
+- **Sumber Belajar**:
+  - [GitHub for Data Scientists](https://guides.github.com/)
+  - [Building Your Data Science Portfolio](https://towardsdatascience.com/10-tips-to-create-an-impressive-data-science-portfolio-105c3eea9b15)
+
+---
+
+## Tahun 2-5: Pengembangan Kompetensi Lanjut
+
+### Quarter 1 - Quarter 4
+Pada tahun kedua hingga kelima, saya akan fokus pada pengembangan keterampilan lebih lanjut, penguasaan alat canggih, dan pengembangan proyek besar.
+
+- **Mengambil kursus lanjutan di bidang Machine Learning, Big Data, dan Cloud Computing**.
+- **Membangun proyek besar dan meningkatkan portfolio**.
+- **Mencari peluang kerja remote di perusahaan internasional**.
+
+---
+
+## Sumber Pembelajaran
+
+1. [Kaggle](https://www.kaggle.com) - Platform untuk dataset dan kompetisi analisis data.
+2. [Coursera](https://www.coursera.org) - Kursus tentang data analysis, SQL, Python, dan statistik.
+3. [DataCamp](https://www.datacamp.com) - Platform untuk belajar Python, SQL, dan visualisasi data.
+4. [Khan Academy](https://www.khanacademy.org) - Sumber belajar gratis untuk statistik dan matematika.
+
+---
+
+## Kesimpulan
+Dengan roadmap ini, saya berharap bisa mempersiapkan diri untuk menjadi seorang data analyst yang kompeten dalam lima tahun ke depan, sambil terus mengembangkan keterampilan dan portfolio saya. Setiap kuartal dan bulan saya akan menetapkan tujuan baru yang harus dicapai agar terus berkembang.
       </ul>
     </div>
   </section>
