--- a/Projects/Roadmap.html
+++ b/Projects/Roadmap.html
@@ -5,6 +5,88 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roadmap Data Analyst</title>
   <link rel="stylesheet" href="../style.css"> <!-- Pastikan file style.css ada -->
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
+      color: #333;
+    }
+
+    nav {
+      background: #007BFF;
+      color: #fff;
+      padding: 1rem 0;
+    }
+
+    nav .container ul {
+      display: flex;
+      list-style: none;
+      justify-content: center;
+      padding: 0;
+    }
+
+    nav .container ul li {
+      margin: 0 15px;
+    }
+
+    nav .container ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
+
+    nav .container ul li a:hover {
+      color: #FFD700;
+    }
+
+    .container {
+      max-width: 1100px;
+      margin: auto;
+      padding: 20px;
+    }
+
+    h2 {
+      color: #007BFF;
+      text-align: center;
+    }
+
+    .roadmap-item {
+      background: #fff;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 20px;
+      margin: 20px 0;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      display: flex;
+      align-items: center;
+    }
+
+    .roadmap-item img {
+      width: 50px;
+      margin-right: 20px;
+    }
+
+    footer {
+      background: #333;
+      color: #fff;
+      text-align: center;
+      padding: 10px 0;
+      margin-top: 20px;
+    }
+
+    footer a {
+      color: #FFD700;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <!-- Navigation Bar -->
@@ -13,7 +95,7 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="index.html">Roadmap</a></li>
-        <li><a href="../index.htmlt">Contact</a></li>
+        <li><a href="../index.html">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -21,40 +103,62 @@
   <!-- Roadmap Section -->
   <section id="roadmap">
     <div class="container">
-      <h2>Data Analyst Roadmap</h2>
-      <p>Here is the roadmap for becoming a data analyst over the next 5 years. This roadmap is structured into yearly, quarterly, and monthly targets to help you systematically achieve your goal.</p>
+      <h2>🚀 Data Analyst Roadmap</h2>
+      <p style="text-align: center;">
+        A step-by-step guide to becoming a data analyst over the next 5 years. Follow this roadmap to master essential skills, build your portfolio, and achieve your career goals.
+      </p>
 
-      <h3>Yearly Roadmap</h3>
-      <ul>
-        <li><strong>Year 1:</strong> Fundamentals and Foundations</li>
-        <li><strong>Year 2:</strong> Intermediate Skills Development</li>
-        <li><strong>Year 3:</strong> Advanced Analytics and Specialization</li>
-        <li><strong>Year 4:</strong> Professional Projects and Networking</li>
-        <li><strong>Year 5:</strong> Targeting International Remote Roles</li>
-      </ul>
+      <!-- Year 1 -->
+      <div class="roadmap-item">
+        <img src="https://via.placeholder.com/50" alt="Year 1">
+        <div>
+          <h3>Year 1: Fundamentals and Foundations</h3>
+          <p>Master the basics of Excel, SQL, and Python. Lay a strong foundation for data analysis by learning essential tools and concepts.</p>
+        </div>
+      </div>
 
-      <h3>Quarterly Breakdown</h3>
-      <ul>
-        <li><strong>Q1:</strong> Learn basic tools (Excel, SQL, Python)</li>
-        <li><strong>Q2:</strong> Focus on data cleaning and basic statistics</li>
-        <li><strong>Q3:</strong> Data visualization and small projects</li>
-        <li><strong>Q4:</strong> Build and publish your portfolio</li>
-      </ul>
+      <!-- Year 2 -->
+      <div class="roadmap-item">
+        <img src="https://via.placeholder.com/50" alt="Year 2">
+        <div>
+          <h3>Year 2: Intermediate Skills Development</h3>
+          <p>Advance your skills in data cleaning, visualization, and statistics. Start building small projects to apply your knowledge.</p>
+        </div>
+      </div>
 
-      <h3>Monthly Tasks</h3>
-      <p>Each month, specific tasks and resources are assigned. For example:</p>
-      <ul>
-        <li><strong>Month 1:</strong> Excel basics and pivot tables</li>
-        <li><strong>Month 2:</strong> SQL queries and database exploration</li>
-        <li><strong>Month 3:</strong> Python basics and data manipulation with pandas</li>
-      </ul>
+      <!-- Year 3 -->
+      <div class="roadmap-item">
+        <img src="https://via.placeholder.com/50" alt="Year 3">
+        <div>
+          <h3>Year 3: Advanced Analytics and Specialization</h3>
+          <p>Focus on advanced analytics, machine learning basics, and domain-specific expertise. Build projects showcasing advanced techniques.</p>
+        </div>
+      </div>
 
-      <h3>Learning Resources</h3>
+      <!-- Year 4 -->
+      <div class="roadmap-item">
+        <img src="https://via.placeholder.com/50" alt="Year 4">
+        <div>
+          <h3>Year 4: Professional Projects and Networking</h3>
+          <p>Work on large-scale projects, contribute to open-source, and connect with professionals in the field to expand your opportunities.</p>
+        </div>
+      </div>
+
+      <!-- Year 5 -->
+      <div class="roadmap-item">
+        <img src="https://via.placeholder.com/50" alt="Year 5">
+        <div>
+          <h3>Year 5: Achieving Your Goal</h3>
+          <p>Polish your portfolio, prepare for interviews, and target remote job opportunities with international companies.</p>
+        </div>
+      </div>
+
+      <h3>📚 Resources</h3>
       <ul>
         <li><a href="https://kaggle.com" target="_blank">Kaggle</a> - Datasets and competitions</li>
-        <li><a href="https://coursera.org" target="_blank">Coursera</a> - Data analysis courses</li>
-        <li><a href="https://datacamp.com" target="_blank">DataCamp</a> - Python, SQL, and visualization tutorials</li>
-        <li><a href="https://khanacademy.org" target="_blank">Khan Academy</a> - Free statistics and probability lessons</li>
+        <li><a href="https://coursera.org" target="_blank">Coursera</a> - Online courses</li>
+        <li><a href="https://datacamp.com" target="_blank">DataCamp</a> - Tutorials for Python, SQL, and visualization</li>
+        <li><a href="https://khanacademy.org" target="_blank">Khan Academy</a> - Free lessons on statistics</li>
       </ul>
     </div>
   </section>
@@ -62,7 +166,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2024 Namikaze Nara. All rights reserved.</p>
+      <p>&copy; 2024 Namikaze Nara. All rights reserved. | <a href="../index.html#contact">Contact Me</a></p>
     </div>
   </footer>
 </body>
