--- a/Projects/Roadmap.html
+++ b/Projects/Roadmap.html
@@ -6,6 +6,23 @@
   <title>Roadmap Data Analyst</title>
   <link rel="stylesheet" href="../style.css"> <!-- Pastikan file style.css ada -->
   <style>
+    #roadmap-header {
+      background: url('../path-to-your-background-image.jpg') no-repeat center center/cover; /* Sama dengan index.html */
+      color: #fff; /* Ubah warna teks menjadi putih */
+      padding: 50px 20px;
+      text-align: center;
+    }
+
+    #roadmap-header h2 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    #roadmap-header p {
+      font-size: 1.2rem;
+    }
+  </style>
+</head>
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
@@ -99,14 +116,17 @@
       </ul>
     </div>
   </nav>
-
+ <!-- Roadmap Header -->
+  <header id="roadmap-header">
+    <h2>🚀 Data Analyst Roadmap</h2>
+    <p>A step-by-step guide to becoming a data analyst over the next 5 years.</p>
+  </header>
   <!-- Roadmap Section -->
   <section id="roadmap">
     <div class="container">
-      <h2>🚀 Data Analyst Roadmap</h2>
-      <p style="text-align: center;">
-        A step-by-step guide to becoming a data analyst over the next 5 years. Follow this roadmap to master essential skills, build your portfolio, and achieve your career goals.
-      </p>
+      <!-- Isi roadmap tetap sama -->
+    </div>
+  </section>
 
       <!-- Year 1 -->
       <div class="roadmap-item">
