--- a/Projects/Roadmap.html
+++ b/Projects/Roadmap.html
@@ -6,23 +6,6 @@
   <title>Roadmap Data Analyst</title>
   <link rel="stylesheet" href="../style.css"> <!-- Pastikan file style.css ada -->
   <style>
-    #roadmap-header {
-      background: url('../path-to-your-background-image.jpg') no-repeat center center/cover; /* Sama dengan index.html */
-      color: #fff; /* Ubah warna teks menjadi putih */
-      padding: 50px 20px;
-      text-align: center;
-    }
-
-    #roadmap-header h2 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-
-    #roadmap-header p {
-      font-size: 1.2rem;
-    }
-  </style>
-</head>
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
@@ -112,21 +95,18 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="index.html">Roadmap</a></li>
-        <li><a href="../index.html">Contact</a></li>
+        <li><a href="../index.html#contact">Contact</a></li>
       </ul>
     </div>
   </nav>
- <!-- Roadmap Header -->
-  <header id="roadmap-header">
-    <h2>🚀 Data Analyst Roadmap</h2>
-    <p>A step-by-step guide to becoming a data analyst over the next 5 years.</p>
-  </header>
+
   <!-- Roadmap Section -->
   <section id="roadmap">
     <div class="container">
-      <!-- Isi roadmap tetap sama -->
-    </div>
-  </section>
+      <h2>🚀 Data Analyst Roadmap</h2>
+      <p style="text-align: center;">
+        A step-by-step guide to becoming a data analyst over the next 5 years. Follow this roadmap to master essential skills, build your portfolio, and achieve your career goals.
+      </p>
 
       <!-- Year 1 -->
       <div class="roadmap-item">
@@ -191,5 +171,6 @@
   </footer>
 </body>
 </html>
+
 
 
