--- a/Projects/Roadmap.html
+++ b/Projects/Roadmap.html
@@ -104,8 +104,7 @@
   <section id="roadmap">
     <div class="container">
       <h2>🚀 Data Analyst Roadmap</h2>
-      <p style="text-align: center; ">
-        <p colour="white"; ></p>
+      <p style="text-align: center; colour: white">
         A step-by-step guide to becoming a data analyst over the next 5 years. Follow this roadmap to master essential skills, build your portfolio, and achieve your career goals.
       </p>
 
