--- a/Projects/Roadmap.html
+++ b/Projects/Roadmap.html
@@ -16,9 +16,10 @@
     }
 
     nav {
-      background: #007BFF;
-      color: #fff;
-      padding: 1rem 0;
+      background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 20px 0;
+  text-align: center;
     }
 
     nav .container ul {
