--- a/Projects/Roadmap.html
+++ b/Projects/Roadmap.html
@@ -155,6 +155,7 @@
       </div>
 
       <h3>📚 Resources</h3>
+      <p style="color: white;"</p>
       <ul>
         <li><a href="https://kaggle.com" target="_blank">Kaggle</a> - Datasets and competitions</li>
         <li><a href="https://coursera.org" target="_blank">Coursera</a> - Online courses</li>
