--- a/Projects/Roadmap.html
+++ b/Projects/Roadmap.html
@@ -154,8 +154,7 @@
         </div>
       </div>
 
-      <h3>📚 Resources</h3>
-      <p style="color: white;"</p>
+      <h3>📚 Resources; "color: white;"</h3>
       <ul>
         <li><a href="https://kaggle.com" target="_blank">Kaggle</a> - Datasets and competitions</li>
         <li><a href="https://coursera.org" target="_blank">Coursera</a> - Online courses</li>
