--- a/Projects/Roadmap.html
+++ b/Projects/Roadmap.html
@@ -154,7 +154,9 @@
         </div>
       </div>
 
-      <h3>📚 Resources; "color: white;"</h3>
+     <div class="resource-block">
+  <h3>📚 Resources</h3>
+</div>
       <ul>
         <li><a href="https://kaggle.com" target="_blank">Kaggle</a> - Datasets and competitions</li>
         <li><a href="https://coursera.org" target="_blank">Coursera</a> - Online courses</li>
