--- a/Projects/Roadmap.html
+++ b/Projects/Roadmap.html
@@ -154,9 +154,8 @@
         </div>
       </div>
 
-     <div class="resource-block">
-  <h3>📚 Resources</h3>
-</div>
+   <h3 class="resources-heading">📚 Resources</h3>
+
       <ul>
         <li><a href="https://kaggle.com" target="_blank">Kaggle</a> - Datasets and competitions</li>
         <li><a href="https://coursera.org" target="_blank">Coursera</a> - Online courses</li>
