--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
   <!-- Projects Section -->
   <section id="projects" class="fade-in">
     <div class="container">
-      <h2>Projects</h2>
-      <p>Here you can showcase your favorite projects or work experiences!</p>
+      <h2>My Library</h2>
       <ul>
-        <li><strong>Project 1:</strong> Description of your first project.</li>
-        <li><strong>Project 2:</strong> Description of your second project.</li>
+        <li><strong>My Journal:</strong></li>
+        <li><strong>My Tecnichal Analysis:</strong></li>
+        <li><strong>My Fundamental Analysis:</strong></li>
       </ul>
     </div>
   </section>
