--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <div class="container">
       <h2>My Library</h2>
       <ul>
-        <li><strong>My Journal:</strong></li>
-        <li><strong>My Tecnichal Analysis:</strong></li>
-        <li><strong>My Fundamental Analysis:</strong></li>
+        <li><strong>My Journal</strong></li>
+        <li><strong>My Tecnichal Analysis</strong></li>
+        <li><strong>My Fundamental Analysis</strong></li>
       </ul>
     </div>
   </section>
