--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container">
       <h2>My Library</h2>
       <ul>
-        <li><strong><a href="Library/juournal.html>My Journal</a></strong></li>
+        <li><strong><a href="Library/journal.html>My Journal</a></strong></li>
         <li><strong><a href="Library/teknikal.html>My Tecnichal Analysis</a></strong></li>
         <li><strong><a href="Library/funda.html>My Fundamental Analysis</a></strong></li>
       </ul>
