--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <div class="container">
       <h2>My Library</h2>
       <ul>
-        <li><strong><a href="Library/journal.html>My Journal</a></strong></li>
-        <li><strong><a href="Library/teknikal.html>My Tecnichal Analysis</a></strong></li>
-        <li><strong><a href="Library/funda.html>My Fundamental Analysis</a></strong></li>
+        <li>><a href="Library/journal.html>My Journal</a></li>
+        <li><a href="Library/teknikal.html>My Tecnichal Analysis</a></li>
+        <li><a href="Library/funda.html>My Fundamental Analysis</a></li>
       </ul>
     </div>
   </section>
