--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="fade-in">
-    <div class="container">
-      <h2>My Library</h2>
-      <ul>
-        <li>><a href="Library/journal.html>My Journal</a></li>
-        <li><a href="Library/teknikal.html>My Tecnichal Analysis</a></li>
-        <li><a href="Library/funda.html>My Fundamental Analysis</a></li>
-      </ul>
-    </div>
-  </section>
+<section id="projects" class="fade-in">
+  <div class="container">
+    <h2>My Library</h2>
+    <ul>
+      <li><a href="Library/journal.html">My Journal</a></li>
+      <li><a href="Library/teknikal.html">My Technical Analysis</a></li>
+      <li><a href="Library/funda.html">My Fundamental Analysis</a></li>
+    </ul>
+  </div>
+</section>
 
    <!-- About Me Section -->
   <section id="about" class="fade-in">
